# AGIME

./: .gitignore  .goosehints  AGIME_MCP_RESEARCH.md  API_VERIFICATION_REPORT.md  BUILD-GUIDE.md  BUILD-WINDOWS.md  CLAUDE.md  Cargo.toml  DOCUMENTATION_UPDATE_CHECKLIST.md  Dockerfile  LICENSE  MCP_EXTENSION_GUIDE.md  NOTICE  PLAN.md  README.en.md  README.md  README.zh-CN.md  REBRANDING_PLAN.md  REBRANDING_STATUS.md  SERVER_DEPLOYMENT.md  TEAM_SERVER_BACKEND_COMPREHENSIVE_DOCUMENTATION.md  _build_check.bat  _build_full.ps1  _run_build.bat  _run_release.bat  _run_team_server_release_logged.bat  _start_team_server_logged.bat  _tmp_build.bat  agime-self-test.yaml  analyze_ppt.py  app.js  bp_content.json  bp_content.txt  bp_out.txt  bp_p1.txt  bp_p2.txt  bp_utf8.txt  bug_report_custom_provider.md  build-goosed.bat  build-incremental.bat  (+53 more)
crates/agime-runtime/: Cargo.toml
crates/agime-runtime/src/: admission.rs  agent_task_payload.rs  capability_policy.rs  capability_types.rs  chat_executor.rs  execution_admission.rs  harness_host_helpers.rs  lib.rs  prompt_composer.rs  provider_factory.rs  tool_content.rs  tool_dispatch.rs  traits.rs
crates/agime-team/: Cargo.toml
crates/agime-team-server/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/agime-team-server/src/: config.rs  license.rs  main.rs  state.rs
crates/agime-team-server/src/agent/: adaptive_executor.rs  agent_prompt_composer.rs  agent_runtime_config.rs  agent_task_v4_runner.rs  ai_describe.rs  api_tools.rs  artifact_synthesis.rs  avatar_governance_tools.rs  capability_policy.rs  channel_coding_cards.rs  channel_project_workspace.rs  channel_workspace_governance.rs  chat_channel_executor.rs  chat_channel_manager.rs  chat_channel_orchestrator.rs  chat_channels.rs  chat_delivery_tools.rs  chat_executor.rs  chat_manager.rs  chat_memory.rs  chat_memory_tools.rs  chat_routes.rs  context_injector.rs  delegation_runtime.rs  developer_tools.rs  direct_host_admission.rs  document_analysis.rs  document_tools.rs  execution_admission.rs  executor.rs  executor_mongo.rs  extension_installer.rs  extension_manager_client.rs  file_preview.rs  full_executor.rs  harness_adapter.rs  harness_core.rs  hook_runtime.rs  host_router.rs  local_fs_workspace_store.rs  (+43 more)
crates/agime-team-server/src/auth/: api_key.rs  middleware.rs  middleware_mongo.rs  migrations.rs  mod.rs  routes.rs  routes_mongo.rs  service.rs  service_mongo.rs  session.rs  session_mongo.rs  system_admin_session_mongo.rs
crates/agime-team-server/src/automation/: contract.rs  mod.rs  models.rs  routes.rs  runner.rs  scheduler.rs  service.rs
crates/agime-team-server/src/scheduled_tasks/: intent.rs  mod.rs  models.rs  routes.rs  scheduler.rs  service.rs
crates/agime-team-server/web-admin/: index.html  package-lock.json  package.json  test_insights.py  tsconfig.json  vite.config.ts
crates/agime-team-server/web-admin/scripts/: check-no-external-runtime-assets.mjs  check-targeted-i18n-cleanup.mjs
crates/agime-team-server/web-admin/src/: App.tsx  index.css
crates/agime-team-server/web-admin/src/__codex__/: SystemAdminPage.build-stub.tsx
crates/agime-team-server/web-admin/src/api/: agent.ts  automation.ts  avatarPortal.ts  brand.ts  chat.ts  client.ts  documents.ts  externalUsers.ts  mission.ts  portal.ts  scheduledTasks.ts  semanticIndex.ts  stats.ts  types.ts  userGroups.ts
crates/agime-team-server/web-admin/src/components/: LanguageSwitcher.tsx  MarkdownContent.tsx  ThemeToggle.tsx
crates/agime-team-server/web-admin/src/config/: teamNavConfig.ts
crates/agime-team-server/web-admin/src/contexts/: AuthContext.tsx  BrandContext.tsx  MobileInteractionModeContext.tsx  TeamContext.tsx  ToastContext.tsx
crates/agime-team-server/web-admin/src/hooks/: useMediaQuery.ts
crates/agime-team-server/web-admin/src/i18n/: index.ts
crates/agime-team-server/web-admin/src/lib/: avatarPublicNarrative.ts  semanticIndexCache.ts
crates/agime-team-server/web-admin/src/pages/: ApiKeysPage.tsx  AvatarAgentManagerPage.tsx  ChatPage.tsx  ChatWorkspacePreviewPage.tsx  DashboardPage.tsx  DigitalAvatarAuditCenterPage.tsx  DigitalAvatarOverviewPage.tsx  DigitalAvatarPolicyCenterPage.tsx  DigitalAvatarTimelinePage.tsx  JoinEntryPage.tsx  JoinTeamPage.tsx  LoginPage.tsx  McpRegistryPage.tsx  MissionBoardPage.tsx  MissionDetailPage.tsx  RegisterPage.tsx  (+9 more)
crates/agime-team/src/: config.rs  db.rs  error.rs  lib.rs
crates/agime-team/src/auth/: mod.rs  unified_middleware.rs
crates/agime-team/src/mcp/: mod.rs  team_client.rs  team_tools.rs
crates/agime-team/src/migrations/: mod.rs
crates/agime-team/src/models/: agent.rs  audit_mongo.rs  common_mongo.rs  document.rs  document_lock_mongo.rs  document_mongo.rs  document_version_mongo.rs  extension_mongo.rs  external_user_mongo.rs  folder.rs  folder_mongo.rs  installed_resource.rs  invite.rs  member.rs  mod.rs  mongo.rs  portal_mongo.rs  recipe_mongo.rs  shared_extension.rs  shared_recipe.rs  shared_skill.rs  skill_mongo.rs  smart_log_mongo.rs  task.rs  team.rs  team_mongo.rs  user_group_mongo.rs
crates/agime-team/src/routes/: documents.rs  extensions.rs  invites.rs  members.rs  mod.rs  recipes.rs  recommendations.rs  skills.rs  sync.rs  teams.rs  unified.rs
crates/agime-team/src/security/: mod.rs  permission.rs  validator.rs
crates/agime-team/src/services/: audit_service.rs  audit_service_mongo.rs  cleanup_service.rs  cleanup_service_mongo.rs  concurrency.rs  document_service.rs  document_service_mongo.rs  document_version_service_mongo.rs  extension_service.rs  extension_service_mongo.rs  external_user_service_mongo.rs  folder_service_mongo.rs  install_service.rs  invite_service.rs  member_service.rs  mod.rs  mongo.rs  package_service.rs  portal_service_mongo.rs  recipe_service.rs  recipe_service_mongo.rs  recommendation_service.rs  recommendation_service_mongo.rs  skill_service.rs  skill_service_mongo.rs  smart_log_service_mongo.rs  stats_service.rs  stats_service_mongo.rs  team_service.rs  team_service_mongo.rs  user_group_service_mongo.rs
crates/agime-team/src/sync/: conflict_resolver.rs  git_sync.rs  mod.rs
(+1145 files in other folders)
