[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "2.1.0"
authors = ["agiatme"]
license = "Apache-2.0"
repository = "https://github.com/fengrui198609/agime"
description = "An AI agent"

[workspace.lints.clippy]
uninlined_format_args = "allow"
string_slice = "warn"

[workspace.dependencies]
rmcp = { version = "0.9.1", features = ["schemars", "auth"] }

# Patch for Windows cross-compilation issue with crunchy
# Disabled for native Windows build
# [patch.crates-io]
# crunchy = { git = "https://github.com/nmathewson/crunchy", branch = "cross-compilation-fix" }
