[package]
name = "agime-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared runtime / harness wrapper layer used by both desktop agime-server and team agime-team-server"

[lints]
workspace = true

[dependencies]
agime = { path = "../agime", default-features = false }
agime-team = { path = "../agime-team" }

anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
tokio-util = "0.7"
tracing = "0.1"
