[package]
name = "agime-team-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Standalone team collaboration server for AGIME"

[[bin]]
name = "agime-team-server"
path = "src/main.rs"

[features]
default = ["tls-rustls"]
tls-rustls = ["agime/tls-rustls", "reqwest/rustls-tls", "rmcp/reqwest"]
tls-native = ["agime/tls-native", "reqwest/native-tls", "rmcp/reqwest-native-tls"]

[dependencies]
regex = "1"
# Core crates
agime-team = { path = "../agime-team" }
agime = { path = "../agime", default-features = false, features = ["team"] }
agime-mcp = { path = "../agime-mcp" }

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database - MongoDB
mongodb = { version = "2.8", features = ["bson-chrono-0_4"] }
bson = { version = "2.9", features = ["chrono-0_4"] }

# Database - SQLite
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", "migrate"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"

# Random number generation
rand = "0.8"

# Directories
dirs = "5"

# Environment variables
dotenvy = "0.15"

# HTTP client for API calls
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Async streaming
futures = "0.3"
async-stream = "0.3"
tokio-util = "0.7"
async-trait = "0.1"
shlex = "1"
croner = "2.1"

# MCP client for agent tool calling
rmcp = { workspace = true, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
] }


# Markdown rendering
pulldown-cmark = "0.10"

# MIME type detection for static file serving
mime_guess = "2"

# Force ring backend for rustls
rustls = { workspace = true }

# Windows registry (for reading system proxy settings)
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
