[package]
name = "agime-team"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Team collaboration module for AGIME - sharing Skills, Recipes, and Extensions"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "fs"] }

# Web framework
axum = { version = "0.8.1", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Random number generation
rand = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# MCP
rmcp.workspace = true

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1"

# Semver for version comparison
semver = "1"

# Git operations
git2 = "0.18"

# Directories
dirs = "5"

# ZIP archive support
zip = "0.6"

# SHA-256 hashing
sha2 = "0.10"

# HMAC for secure token generation
hmac = "0.12"
hex = "0.4"

# Base64 encoding
base64 = "0.22"

# MIME type detection
mime_guess = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
